Deployment setup & updated README file

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+.idea
 
 # PyInstaller
 # Usually these files are written by a python script from a template
@@ -80,3 +81,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Firebase
+.firebase
